# REngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  main.cpp  object_type.hpp  string-sizetype.cpp  template.hpp  test.cpp  test.hpp  type_helper.hpp  type_list.hpp  type_list_utils.hpp
cmake/: CompileOptions.cmake  Graphics.cmake  Skia.cmake  rdi_options.cmake  submodule.cmake
example/: CMakeLists.txt  link_test.cpp  main.cpp  vulkan_tutorial.cpp
example/gc_test/: CMakeLists.txt  main.cpp
example/link_test/: CMakeLists.txt  comp_unit2.cpp  comp_unit2.h  dyn_cast_test.cpp  test.cpp  test.h
example/reflection/: CMakeLists.txt  dyn_cast_test.cpp  main.cpp
example/vulkan_tutorials/: CMakeLists.txt  application.cpp  application.hpp  init.cpp  primitives.hpp  vulkan_tutorial.cpp
include/core/GObject/: GCManager.hpp  GClass.hpp  GObject.hpp
include/core/frozen/: algorithm.h  map.h  random.h  unordered_set.h
include/core/reflection/: Concepts.hpp  Field.hpp  class.hpp  function.hpp  reflection.hpp  type_helper.hpp  types.hpp
include/frozen/: unordered_map.h
include/meta_types/: type_list.hpp  type_list_utils.hpp
include/reflection/: class.hpp  detail.hpp  function.hpp  member.hpp  object.hpp  property.hpp  property_macros.hpp  reflection.hpp  type_helper.hpp
include/traits/: func_traits.hpp
sources/include/HAL/: Platforms.h  attributes.hpp  platforms.hpp
sources/include/HAL/Linux/: Platforms.hpp
sources/include/HAL/linux/: attributes.hpp  platforms.hpp
sources/include/HAL/windows/: attributes.hpp  glfw.hpp  platforms.hpp
sources/include/core/: core.hpp  definitions.hpp
sources/include/core/garbage_collection/: garbage_collection.hpp
sources/include/core/math/: basics.hpp  color.hpp  constants.hpp  extent.hpp  matrix3.hpp  point.hpp  point2.hpp  point3.hpp  point4.hpp  quaternion.hpp  rotator.hpp  transforms.hpp  vector.hpp  vector2.hpp  vector3.hpp
sources/include/core_object/: class.hpp  concepts.hpp  core_object.hpp  definitions.hpp  garbage_collection.hpp  object.hpp  object_allocators.hpp  object_array.hpp  object_globals.hpp  object_macros.hpp
sources/include/core_object/templates/: casts.hpp  concepts.hpp
sources/include/engine/: engine.hpp
sources/include/engine/asset/: asset.hpp  static_mesh_asset.hpp
sources/include/engine/asset/import/: asset_importer.hpp  import_tasks.hpp  static_mesh_importer.hpp
sources/include/engine/mesh/: mesh_resources.hpp
sources/include/engine/mesh/static/: static_mesh.hpp  static_mesh_resources.hpp
sources/include/meta/: array.hpp  concepts.hpp  func_traits.hpp  functional_helpers.hpp  type_list.hpp  type_traits.hpp  utils.hpp  vulkan_helper.hpp
sources/include/plate/: definitions.hpp  plate.hpp  plate_types.hpp  window.hpp
sources/include/plate/plate_core/: composite.hpp  reply.hpp  slot.hpp
sources/include/plate/plate_core/layout/: margin.hpp
sources/include/plate/plate_element/: box.hpp  filled_box.hpp
sources/include/plate/plate_render/: drawable.hpp  drawable_batch.hpp  drawable_description.hpp  drawable_description_factory.hpp  drawable_info.hpp  drawable_layout.hpp  drawable_vertex.hpp  element.hpp  element_batcher.hpp  element_factory.hpp  element_info.hpp  element_layout.hpp  plate_renderer.hpp
sources/include/rdi/: buffer.hpp  common.hpp  constants.hpp  device.hpp  frame.hpp  rdi.hpp  rdi_buffers.hpp  rdi_commands.hpp  rdi_commons.hpp  rdi_constants.hpp  rdi_frame.hpp  rdi_generic.hpp  rdi_resources.hpp  render_device.hpp  resources.hpp  viewport.hpp
sources/include/rdi/vk/: rdi_vulkan.hpp  vulkan_commons.hpp
sources/include/reflection/: README.md  class_reflection.hpp  field_property.hpp  field_reflection.hpp  function_reflection.hpp  reflection.hpp  reflection_concepts.hpp  reflection_generator.hpp  reflection_helper.hpp  reflection_types.hpp  reflection_utils.hpp
sources/include/render/: command_context.hpp
sources/include/render/resources/: render_resource.hpp
sources/include/renderer/: command_context.hpp  definitions.hpp  pipeline.hpp
sources/include/section/: section_interface.hpp
sources/include/utils/: non_copyable.hpp
sources/shaders/example/: shader.frag  shader.vert
sources/src/: CMakeLists.txt
sources/src/core/: CMakeLists.txt  main.cpp
sources/src/core/garbage_collection/: garbage_collection.cpp
sources/src/core/math/: color.cpp
sources/src/core_object/: CMakeLists.txt  class.cpp  garbage_collection.cpp  object.cpp  object_allocators.cpp  object_array.cpp
sources/src/engine/: CMakeLists.txt  main.cpp
sources/src/engine/asset/: asset.cpp  static_mesh_asset.cpp
sources/src/engine/asset/import/: static_mesh_importer.cpp  static_mesh_importer.hpp
sources/src/engine/mesh/static/: static_mesh_resources.cpp
sources/src/plate/: CMakeLists.txt  plate.cpp
sources/src/plate/plate_element/: box.cpp  filled_box.cpp
sources/src/plate/plate_render/: drawable.cpp  drawable_batch.cpp  drawable_description.cpp  drawable_description_factory.cpp  drawable_factory.cpp  drawable_factory.hpp  drawable_info.cpp  drawable_layout.cpp  element.cpp  element_factory.cpp
sources/src/rdi/: CMakeLists.txt  device.cpp  rdi.cpp  viewport.cpp
sources/src/rdi/vk/: common.hpp  extensions.cpp  extensions.hpp  render_device.cpp  render_device.hpp  section.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_command_buffer_pool.hpp  vulkan_device.hpp  vulkan_extensions.cpp  vulkan_extensions.hpp  vulkan_queue.hpp  vulkan_swapchain.hpp
sources/src/render/: CMakeLists.txt  render.cpp
src/core/GObject/: CMakeLists.txt  Class.cpp
src/core/GarbageCollection/: CMakeLists.txt  GCManager.cpp
src/include/core_object/: class.hpp  object.hpp
src/include/reflection/: field_reflection.hpp  function_reflection.hpp  reflection.hpp  reflection_concepts.hpp  reflection_helper.hpp  reflection_utils.hpp
src/include/traits/: func_traits.hpp
test/: CMakeLists.txt  main.cpp  test.hpp
